--- a/src/example.html
+++ b/src/example.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>JS弹幕实现-div</title>
-    <link ref="stylesheet" href="example.css">
+    <link ref="stylesheet" href="./example.css">
 </head>
 <body>
 
