--- a/src/example.html
+++ b/src/example.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>JS弹幕实现-div</title>
-    <link ref="stylesheet" href="/barrage-div/src/example.css">
+    <link rel="stylesheet" href="./example.css">
 </head>
 <body>
 
@@ -17,7 +17,7 @@
         </div>
     </div>
 </div>
-<script src="/barrage-div/src/barrage.js"></script>
-<script src="/barrage-div/src/example.js"></script>
+<script src="./barrage.js"></script>
+<script src="./example.js"></script>
 </body>
 </html>
